# yumlabs-web

./: .gitignore
yum-labs-backend/: Cargo.toml
yum-labs-backend/src/: constants.rs  database.rs  llm.rs  main.rs  routes.rs  structs.rs
yum-labs-frontend/: package.json  pnpm-lock.yaml
yum-labs-frontend/content/: algos.mdx
yum-labs-frontend/content/guides/: readme-template-1.mdx  yum-commits.mdx
yum-labs-frontend/content/reference/: project-ideas.mdx
yum-labs-frontend/content/reference/gists/: octomath.mdx  speak-it.mdx  voronoi-polygons.mdx  voronoi.mdx
yum-labs-frontend/content/reference/programming/: csharp.mdx  rust-docs.mdx  rust.mdx
yum-labs-frontend/content/stories/: short-story-one.mdx  short-story-three.mdx  short-story-two.mdx
yum-labs-frontend/src/app/: globals.css  layout.tsx  page.tsx
yum-labs-frontend/src/app/blog/[...slug]/: page.tsx
yum-labs-frontend/src/app/llm-interaction/: Dashboard.tsx  LlmInteractComboBox.tsx  page.tsx
yum-labs-frontend/src/app/llm-outputs/: RecordsTable.tsx  page.tsx
yum-labs-frontend/src/data/: attractions.csv  blog.ts  resume.tsx
yum-labs-frontend/src/lib/: api.ts
