[package]
name = "yum-labs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
surrealdb = "2.0.4"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-cors = "0.7.0"
ollama-rs = "0.2.1"
